# se3_rl

./: .coderabbit.yaml  .env.example  .gitignore  AGENTS.md  MUJOCO_LOG.TXT  README.md  justfile  log.md  prek.toml  pyproject.toml  workflow.md
.agents/skills/nx-debug-workflow/: SKILL.md
.agents/skills/remote-ckpt-play/: SKILL.md
.agents/skills/remote-ckpt-play/agents/: openai.yaml
.agents/skills/remote-ckpt-play/scripts/: sync_and_play.sh
.agents/skills/remote-dev-se3/: SKILL.md
.agents/skills/remote-dev-se3/machines/: a800-xyh-am345.md  a800.md  gpufree.md  nx.md  wuyingyun.md  wuyinyun.md
.agents/skills/rl-tuning/: SKILL.md
.agents/skills/rl-tuning/agents/: openai.yaml
.agents/skills/rl-tuning/references/: gradient-flow.md  physical-constraints.md  reward-design.md  symptom-to-hypothesis.md
.github/workflows/: ci.yml
.sisyphus/plans/: gamepad-controller.md
.sisyphus/run-continuation/: ses_1ff636438ffeftcEr8HMVDQe7g.json  ses_20420155effeVOhVYthbunbN7k.json
assets/base_model/: README.md
assets/ctbc_profiles/: stair_drawn_seed.json
assets/robots/minidog/mjcf/: minidog_16dof_16kg.xml  minidog_16dof_20kg.xml
assets/robots/serialleg/meshes/: Left_calf_link.STL  Left_thigh_link.STL  Left_wheel_link.STL  Right_calf_link.STL  Right_thigh_link.STL  Right_wheel_link.STL  lf_calf_1_link.STL  lf_calf_2_link.STL  lf_calf_3_link.STL  lf_thigh_link.STL  lf_wheel_link.STL  rf_calf_1_link.STL  rf_calf_2_link.STL  rf_calf_3_link.STL  rf_thigh_link.STL  rf_wheel_link.STL
assets/robots/serialleg/mjcf/: serialleg_closed_chain_v2_spring.xml  serialleg_closed_chain_v3_reexport.xml  serialleg_closed_chain_v3_train.xml  serialleg_closed_chain_v3_train_obb_trim.xml  serialleg_closed_chain_v3_train_spring.xml  serialleg_fidelity_cylinder_wheels.xml  (+3 more)
assets/trajectories/: jump_0.1m.npz  jump_0.2m.npz  jump_0.3m.npz  jump_0.4m.npz  jump_0.5m.npz  jump_0.6m.npz
docs/: background.md  common_mistakes.md  control_frequency.md  efgcl_paper_summary.md  efgcl_spotting.md  how_to_start.md  laptop_viser_play.md  nx_real_robot_deployment.md  perf.md  task_architecture.md  train.md  wuyingyun.md  wuyinyun.md
docs/plan/: closedchain_mjcf_migration.md  gait_expert_upgrade.md  gru_recovery_training.md  knee_spring_modeling.md  mjlab_runtime_upgrade.md  moe_multi_speed.md  motor_thermal_model.md  recovery_stand_training.md  recovery_v2_two_stage.md
docs/todo/: collision_model_optimization.md
scripts/: apply_sw_collision_to_mjcf.py  build_leg_coacd_collision.py  build_stair_mjcf.py  build_sw_collision_envelopes.py  build_sw_original_leg_visuals.py  build_unitree_style_collision.py  check_closedchain_model.py  check_deploy_sim2sim_contract.py  check_recovery_sim2sim_contract.py  ctbc_profile_web.py  diagnose_stair_rollout.py  evaluate_recovery_checkpoint.py  evaluate_recovery_discovery_fixed_poses.py  evaluate_recovery_stand_checkpoint.py  evaluate_rough_checkpoint_sweep.py  export_sw_collision_meshes.py  flow_play_compare.py  generate_stair_ctbc_profile.py  github_release_checkpoint_publisher.py  laptop_stair_play_keepalive.cmd  laptop_stair_play_keepalive.ps1  laptop_stair_watcher.ps1  laptop_viser_bridge.ps1  local_connect_proxy.py  local_stair_viser_watcher.py  measure_linkage_from_mjcf.py  plot_ctbc_lift_linkage.py  plot_m3508_14to1_tn_curve.py  plot_spring_geometry.py  plot_tn_envelope.py  plot_wheel_dog_tn_samples.py  probe_ctbc_feedforward.py  record_stair_ctbc_rerun.py  remote_bash.ps1  remote_sync_start_stair.py  scan_ctbc_bias.py  split_sw_base_link_mesh.py  start_viser_bridge_via_laptop.ps1  sweep_stair_ctbc_sim2sim.py  train_rough_discovery_multigpu.sh  (+12 more)
src/se3_deploy/: __init__.py  cdc.py  cli.py  export_npz.py  export_onnx.py  numpy_policy.py  observation.py  onnx_policy.py  protocol.py  recovery_runtime.py  replay_telemetry.py  visualize_cdc_state.py
src/se3_flow_match/: __init__.py  checkpoint.py  collect.py  config.py  dataset.py  losses.py  model.py  monitor.py  play.py  registry.py  runtime.py  sampler.py  smoke.py  task_mode.py  teachers.py  train.py
src/se3_jump_to/: __init__.py  cli.py  kinematics.py  replay.py
src/se3_shared/: __init__.py  action_delay.py  action_history.py  ctbc_feedforward.py  fourbar.py  grounded_pose.py  height_default.py  leg_policy.py  motor.py  observation.py  policy_io.py  recovery.py  robot.py  task_mode.py
src/se3_shared/tasks/: __init__.py  base.py  legacy_locomotion.py  registry.py  task_mode_locomotion.py
src/se3_sim2sim/: __init__.py  cli.py  closed_chain.py  config.py  course.py  deploy_telemetry.py  diagnostics.py  kinematics.py  math_utils.py  mujoco_viewer.py  observation.py  policy.py  rerun_viewer.py  robot.py  runtime_spec.py  stair_ctbc.py  teleop_cli.py  teleop_input.py  viser_viewer.py  workflow.py  yaw_pid.py
src/se3_tools/: __init__.py  grounded_pose.py  joint_diag.py  joint_viewer.py  recovery_state_cache.py  recovery_state_cache_mjlab.py
src/se3_train/: __init__.py  async_logging.py  cli.py  env_cfg.py  play.py  rl_cfg.py  robot_cfg.py  runner.py  torque_speed_actuator.py  training_runtime.py
src/se3_train/mdp/: __init__.py  action_period.py  actions.py  commands.py  contact_utils.py  curriculums.py  diagnostic_logging.py  efgcl_stabilizer.py  events.py  height_default_cache.py  joint_indices.py  jump_commands.py  jump_curriculums.py  jump_rewards.py  jump_terminations.py  jump_traj_tracking.py  jump_trajectories.py  leg_alignment.py  observations.py  recovery_state.py  rewards.py  stair_rewards.py  stair_state.py  task_mode_commands.py  task_mode_rewards.py  task_modes.py  terminations.py
src/se3_train/tasks/: __init__.py
src/se3_train/teacher_student/: __init__.py  algorithm.py  config.py  masks.py  teachers.py
src/se3_train/terrains/: __init__.py  gap_ramp_facility.py
src/swanlab_rsl_rl/: __init__.py  monkey_patch.py  swanlab_utils.py
src/vmc_kinematics/: __init__.py  constants.py  forward.py  torque_mapping.py  velocity.py
tmp/: diagnose_pyramid_up_spawn.py  run_stair_ctbc_viser_12012.py  run_stair_ctbc_viser_six_envs.py
web/: ctbc_profile_editor.html  index.html
(+337 files in other folders)
