[project]
name = "se3-wheel-leg"
version = "0.1.0"
description = "轮腿机器人 MJLab 训练与 sim2sim 验证框架"
readme = "README.md"
authors = [
    { name = "zhongjinlu", email = "zhongjin.lu@mondorobotics.com" }
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "mjlab==1.3.0",
    "warp-lang==1.12.1",
    "torch==2.11.0",
    "mujoco==3.8.0",
    "rerun-sdk==0.31.4",
    "scipy==1.17.1",
    "numpy==2.4.4",
    "wandb==0.26.1",
    "pydantic==2.13.4",
]

[project.scripts]
se3-train = "se3_train.cli:main"
se3-sim2sim = "se3_sim2sim.cli:main"
se3-joint-viewer = "se3_tools.joint_viewer:main"
se3-joint-diag = "se3_tools.joint_diag:main"

[build-system]
requires = ["uv_build==0.11.8"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = ["se3_train", "se3_sim2sim", "se3_shared", "se3_tools"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "prek==0.3.13",
    "ruff==0.15.12",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle 错误
    "W",   # pycodestyle 警告
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade（强制 3.11+ 语法）
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff 特有规则
]
ignore = [
    "E501",   # 行长度由 formatter 处理
    "B008",   # 允许函数参数默认值中的函数调用
    "RUF002", # 允许中文全角标点（项目注释使用中文）
    "RUF003", # 同上（注释中的全角标点）
]

[tool.ruff.lint.isort]
known-first-party = ["se3_train", "se3_sim2sim", "se3_shared", "se3_tools"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
